--- a/legal.html
+++ b/legal.html
@@ -53,22 +53,23 @@
         </ul>        
     </aside>    
     <article title="Main Article Content"> <!-- Main article content -->
-        <h1 id="Article-Title">Legal/ Terms and Conditions</h1>
+        <h1 id="Article-Title">Legal</h1>
+            <h2>Terms and Conditions</h2>
                 <p>By viewing this website, you have agreed to the terms and conditions outlined below, if you do not agree with the terms you must leave the website.</p>
-            <h2 id="thirdparties">Use of third parties and responsibility for third party content and services.</h2> 
+            <h3 id="thirdparties">Use of third parties and responsibility for third party content and services.</h3> 
                 <p>On this website there is content provided by third parties, there is also links to third party websites, although I make an effort to ensure that the content provided by these third parties is safe and legal, I take no legal responsibility for any of the content that is distributed or provided by a third party provider, therefore you cannot take legal action against me for the actions or policies of third parties that are associated with this website.</p>
                 <p>I advise that you read the privacy policies, and terms and conditions of any third-party websites that you access from this site before engaging, providing data, downloading files, etc, as you do so at your own risk.</p>
-            <h2 id="modification">Changes and Modifications to Policy.</h2>
+            <h3 id="modification">Changes and Modifications to Policy.</h3>
                 <p>Things change, sometimes I might need to update the terms of this policy. I retain the full legal right to modify these terms and conditions as and when I please, if the terms and conditions are updated you must except the new terms or stop using this website immediately, therefore you must verify that you except the terms every time you visit the website.</p>
-            <h2 id="warranty">Guaranties and Warranty.</h2>
+            <h3 id="warranty">Guaranties and Warranty.</h3>
                 <p>I provide no warranty for any of the software that is distributed or recommended by this website, this means that you use all of the software featured and distributed on this website at your own risk, I cannot be held responsible for any implications that might arise as a result of your use of this software, I also am not required to assist with any problems that you encounter when using the software and you must find your own solutions if I have not already outlined any.</p>
-            <h2 id="no-professional-advice">No professional advice on this website.</h2>    
+            <h3 id="no-professional-advice">No professional advice on this website.</h3>    
                 <p>I am not an IT professional/ consultant, and I cannot provide professional advice as it is not in my legal rights, if you take my advice you do this at your own risk, I cannot be held legally responsible for any of the outcomes that arise from you taking the advice that is featured on this website.</p>
-        <h1 id="Privacy-Policy">Privacy policy</h1>
+        <h2 id="Privacy-Policy">Privacy policy</h2>
                 <p>This privacy policy is a part of the main legal terms and conditions that you must agree to when using this website.</p>
                 <p>At Hackboto Tech Tips, accessible from <a title="Go To Website" href="https://hackbototechtips.github.io/">https://hackbototechtips.github.io</a>, one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is collected and recorded by Hackboto Tech Tips and how we use it.</p>
                 <p>Our Privacy Policy was generated with the help of <a title="View Website" href="https://www.gdprprivacypolicy.net/">GDPR Privacy Policy Generator</a></p>
-            <h2 id="GDPR">General Data Protection Regulation (GDPR)</h2>
+            <h3 id="GDPR">General Data Protection Regulation (GDPR)</h3>
                 <p>We are a Data Controller of your information.</p>
                 <p>Hackboto Tech Tips legal basis for collecting and using the personal information described in this Privacy Policy depends on the Personal Information we collect and the specific context in which we collect the information: </p>
                     <ul>
@@ -88,23 +89,23 @@
                         <li>The right to data portability</li>
                         <li>The right to withdraw consent</li>
                     </ul>
-            <h2 id="log-files">Log Files</h2>
-                <p>Hackboto Tech Tips follows a standard procedure of using log files. These files log visitors when they visit websites. All hosting companies do this and a part of hosting services' analytics. The information collected by log files include internet protocol (IP) addresses, browser type, Internet Service Provider (ISP), date and time stamp, referring/exit pages, and possibly the number of clicks. These are not linked to any information that is personally identifiable. The purpose of the information is for analyzing trends, administering the site, tracking users' movement on the website, and gathering demographic information.</p>
-            <h2 id="thirdpartyprivacypolicies">Third Party Privacy Policies</h2>
+            <h3 id="log-files">Log Files</h3>
+                <p>Hackboto Tech Tips follows a standard procedure of using log files. These files log visitors when they visit websites. All hosting companies do this and a part of hosting services' analytics. The information collected by log files include internet protocol (IP) addresses, browser type, Internet Service Provider (ISP), date and time stamp, referring/exit pages, and possibly the number of clicks. These are not linked to any information that is personally identifiable. The purpose of the information is for analysing trends, administering the site, tracking users' movement on the website, and gathering demographic information.</p>
+            <h3 id="thirdpartyprivacypolicies">Third Party Privacy Policies</h3>
                 <p>You may consult this list to find the Privacy Policy for each of the advertising partners of Hackboto Tech Tips.</p>
                 <p>Third-party ad servers or ad networks uses technologies like cookies, JavaScript, or Web Beacons that are used in their respective advertisements and links that appear on Hackboto Tech Tips, which are sent directly to users' browser. They automatically receive your IP address when this occurs. These technologies are used to measure the effectiveness of their advertising campaigns and/or to personalise the advertising content that you see on websites that you visit.</p>
                 <p>Note that Hackboto Tech Tips has no access to or control over these cookies that are used by third-party advertisers.</p>
                 <p>Hackboto Tech Tips's Privacy Policy does not apply to other advertisers or websites. Thus, we are advising you to consult the respective Privacy Policies of these third-party ad servers for more detailed information. It may include their practices and instructions about how to opt-out of certain options.</p>
                 <p>You can choose to disable cookies through your individual browser options. To know more detailed information about cookie management with specific web browsers, it can be found at the browsers' respective websites.</p>
-            <h2 id="childrensinfo">Children's Information Policy</h2>
+            <h3 id="childrensinfo">Children's Information Policy</h3>
                 <p>Another part of our priority is adding protection for children while using the internet. We encourage parents and guardians to observe, participate in, and/or monitor and guide their online activity.</p>
                 <p>Hackboto Tech Tips does not knowingly collect any Personal Identifiable Information from children under the age of 13. If you think that your child provided this kind of information on our website, we strongly encourage you to contact us immediately and we will do our best efforts to promptly remove such information from our records.</p>
-            <h2 id="onlinepolicy">Online Privacy Policy Only</h2>
+            <h3 id="onlinepolicy">Online Privacy Policy Only</h3>
                 <p>Our Privacy Policy applies only to our online activities and is valid for visitors to our website with regards to the information that they shared and/or collect in Hackboto Tech Tips. This policy is not applicable to any information collected offline or via channels other than this website.</p>
-            <h2 id="consent">Consent</h2>
+            <h3 id="consent">Consent</h3>
                 <p>By using our website, you hereby consent to our Privacy Policy and agree to its terms.</p>
         <hr>
-        <p>Page Updated: 27/05/2024</p>
+        <p>Page Updated: 09/08/2024</p>
         <p>Page Author: Hackboto</p>
     </article>
     <footer class="asidefooter" title="Website Footer"> <!-- Footer section -->
